// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List> by default matches with snapshot 1`] = `
<ul
  className="sc-AxgMl hsyCNp"
>
  <li>
    <div>
      Item 1
    </div>
  </li>
  <li>
    <div>
      Item 2
    </div>
  </li>
  <li>
    <div>
      Item 3
    </div>
  </li>
</ul>
`;

exports[`<List> with <ListButtonItem> by default matches with snapshot 1`] = `
<ul
  className="sc-AxgMl hsyCNp"
>
  <li>
    <div
      aria-disabled={false}
      className="sc-AxirZ jmmoJM k-List__button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="sc-AxiKw iKcUQB"
      >
        Alice
      </div>
      <div
        className="sc-AxhCb etEcwG"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right sc-AxhUy iBQtXL k-Button__icon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
  <li>
    <div
      aria-disabled={false}
      className="sc-AxirZ epamle k-List__button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="sc-AxiKw iKcUQB"
      >
        Cheshire Cat
      </div>
      <div
        className="sc-AxhCb etEcwG"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right sc-AxhUy iBQtXL k-Button__icon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
  <li>
    <div
      aria-disabled={false}
      className="sc-AxirZ epamle k-List__button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="sc-AxiKw iKcUQB"
      >
        Mad Hatter
      </div>
      <div
        className="sc-AxhCb etEcwG"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right sc-AxhUy iBQtXL k-Button__icon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
</ul>
`;

exports[`<List> with <ListButtonItem> with a disabled button matches with snapshot 1`] = `
<ul
  className="sc-AxgMl hsyCNp"
>
  <li>
    <div
      aria-disabled={false}
      className="sc-AxirZ jmmoJM k-List__button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="sc-AxiKw iKcUQB"
      >
        Alice
      </div>
      <div
        className="sc-AxhCb etEcwG"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right sc-AxhUy iBQtXL k-Button__icon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
  <li>
    <div
      aria-disabled={true}
      className="sc-AxirZ CiDDE k-List__button"
      disabled={true}
      onBlur={[Function]}
      onClick={null}
      onFocus={[Function]}
      onKeyPress={null}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="-1"
    >
      <div
        className="sc-AxiKw iKcUQB"
      >
        Cheshire Cat
      </div>
      <div
        className="sc-AxhCb etEcwG"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right k-ArrowIcon--disabled sc-AxhUy iAgotC k-Button__icon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
  <li>
    <div
      aria-disabled={false}
      className="sc-AxirZ epamle k-List__button"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex="0"
    >
      <div
        className="sc-AxiKw iKcUQB"
      >
        Mad Hatter
      </div>
      <div
        className="sc-AxhCb etEcwG"
      >
        <svg
          className="k-ArrowIcon k-ArrowIcon--right sc-AxhUy iBQtXL k-Button__icon"
          height="5.64"
          viewBox="0 0 6 6"
          width="8.48"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Arrow
          </title>
          <path
            d="M6 0H0v6h2V2h4z"
          />
        </svg>
      </div>
    </div>
  </li>
</ul>
`;
